# ArithOS

./: .gitignore  CMakeLists.txt  FLASH_GUIDE.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  build.sh  create_uf2.py
src/: board_pins.h  boot_animation.c  boot_animation.h  calc.c  calc.h  display.c  display.h  keys.c  keys.h  main.c  tusb_config.h  ui.c  ui.h
src/apps/: app.h  app_manager.c  badusb_app.c  bruteforce_app.c  calculator_app.c  code_editor_app.c  launcher_app.c  packet_sniffer_app.c  stopwatch_app.c  wifi_scanner_app.c
